--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 
 .title-area {
     text-align: center;
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 .title-area h2 {
@@ -95,4 +95,106 @@ body {
 
 .button {
     padding-top: 50px;
+}
+
+.feacher-box {
+    display: flex;
+    padding: 50px 100px;
+
+}
+
+.feacher-box .box {
+    background-color: rgba(79, 157, 166, 0.1);
+    width: 30%;
+    padding: 40px 20px;
+    margin: 15px;
+    border-radius: 5px;
+}
+
+.box.box-style-2 {
+    background-color: rgba(255, 89, 89, 0.1);
+}
+
+.box.box-style-3 {
+    background-color: #FFF4D6;
+}
+
+.blog-area {
+    padding: 50px 100px;
+}
+
+.blog {
+    display: flex;
+}
+
+.blog-image {
+    width: 50%;
+
+}
+
+.blog-content {
+    width: 50%;
+    padding: 50px;
+}
+
+.blog-image img {
+    width: 100%;
+
+}
+
+.blog-content h2 {
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 55px;
+
+}
+
+p.content-top {
+    padding-bottom: 25px;
+}
+
+.blog-2 {
+    padding-top: 51px;
+}
+
+.update-area {
+    padding: 0 100px;
+}
+
+.subscripe-area {
+    margin: 50px 233px;
+    text-align: center;
+    background: #FFF4D6;
+    padding: 100px;
+}
+
+.subscripe-area input {
+    padding: 16px 20px;
+    font-size: 20px;
+    border-radius: 5px 0 0px 5px;
+    border: none;
+}
+
+.subscripe-area form {
+    display: flex;
+}
+
+.subscripe-area a.button-style {
+    border-radius: 0 5px 5px 0;
+}
+
+.footer-area {
+    padding: 40px 100px;
+    text-align: center;
+    background-color: #0B0D17;
+}
+
+.footer-area h2 {
+    font-family: 'Lobster', cursive;
+    color: #FF5959;
+    font-size: 36px;
+}
+
+.footer-area p {
+    color: #fff;
 }
